--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  font-family: 'Biryani', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 /* Set a background color or image */
