--- a/style.css
+++ b/style.css
@@ -107,7 +107,15 @@ nav a:active {
     transform: none;
   }
 }
-
+/* Header styling */
+.header2 {
+  display: none;
+  background-color: #000;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 28px;
+}
 
 /* Hide sidebar by default */
 nav {
