--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ header {
 }
 
 nav {
+  position: fixed;
   background-color: #444;
   width: 200px;
   display: flex;
@@ -136,6 +137,7 @@ nav {
 @media (min-width: 769px) {
   nav {
     display: flex;
+    position: fixed;
     flex-direction: column;
     align-items: center;
     background-color: #444;
