--- a/dark.css
+++ b/dark.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Roboto Slab', sans-serif;
+  font-family: 'Nunito', sans-serif;
   background-color: #1e1e1e;
   color: #fff;
 }
