--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ button:hover {
 }
 
 /* Style form elements */
-input[type="text"], input[type="submit"] {
+input[type="submit"] {
   padding: 10px;
   margin: 5px;
   border: 1px solid #ccc;
