--- a/dark.css
+++ b/dark.css
@@ -392,3 +392,29 @@ img {
 .news-list-item a:hover {
   color: #2980b9;
 }
+
+/* Style for the thought bubble */
+.thought-bubble {
+  position: relative;
+  background-color: #000;
+  border: 1px solid #333;
+  border-radius: 10px;
+  padding: 15px;
+  max-width: 500px;
+  margin: 20px 0;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fff;
+}
+
+.thought-bubble::after {
+  content: '';
+  position: absolute;
+  bottom: -20px;
+  left: 20px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 20px solid #000;
+}
