--- a/dark.css
+++ b/dark.css
@@ -50,6 +50,7 @@ input[type="submit"] {
 }
 
 header {
+  position: fixed;
   padding: 2em;
 }
 
@@ -63,6 +64,8 @@ nav {
 
 nav ul {
   list-style: none;
+  position: fixed;
+  top: 10em;
   padding: 0;
 }
 
